<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ob_three_main_title"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/primary_blue"/>

    <ImageView
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:src="@drawable/ob_3"
        android:contentDescription="@string/app_name"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ob_three_tag_title"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold"
        android:textColor="@color/green_2"/>
</LinearLayout>