<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".NotificationActivity"
    android:background="@color/bg_color_primary"
    android:padding="20dp">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/back_btn"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:backgroundTint="@android:color/transparent"
        app:icon="@drawable/back_arrow"
        app:iconTint="@null"
        app:iconSize="32dp"
        app:iconGravity="textStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <View
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:id="@+id/notification_card"
        android:layout_marginTop="76dp"
        android:background="@drawable/notification_bkg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="10dp">
    </View>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:text="@string/notification_text"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/notification_card"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/notification_card"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="10dp"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:text="@string/notification_content"
        android:textSize="16sp"
        android:textColor="@color/gray_2"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/notification_card"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="@id/notification_card"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="40dp"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/clear_button"
        android:text="@string/clear_btn_text"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="16sp"
        android:backgroundTint="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/no_notifications_text"
        android:text="@string/no_notifications"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"/>



</androidx.constraintlayout.widget.ConstraintLayout>